--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Local turistico</title>
+
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alice&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -28,7 +34,7 @@
       <img src="assets/haedong-yonggungsa.png" alt="Templo Haedong Yonggungsa">
       <h3>1.Templo Haedong Yonggungsa</h3>
       <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.</p>
-      <span class="list-title">Bom para:</span>
+      <span>Bom para:</span>
       <ul>
         <li>História</li>
       </ul>
@@ -38,7 +44,7 @@
       <img src="assets/beomeo-sa.png" alt="Templo Beomeo-sa">
       <h3>2. Templo Beomeo-sa</h3>
       <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
-      <span class="list-title">Bom para:</span>
+      <span>Bom para:</span>
       <ul>
         <li>História</li>
       </ul>
@@ -48,7 +54,7 @@
       <img src="assets/yongdusan.png" alt="Parque Yongdusan">
       <h3>3. Parque Yongdusan</h3>
       <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
-      <span class="list-title">Bom para:</span>
+      <span>Bom para:</span>
       <ul>
         <li>Casais</li>
         <li>Famílias</li>
