--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <article>
       <img src="assets/haedong-yonggungsa.png" alt="Templo Haedong Yonggungsa">
       <h3>1.Templo Haedong Yonggungsa</h3>
-      <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.</p>
+      <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.</p> <br>
       <span>Bom para:</span>
       <ul>
         <li>História</li>
@@ -43,7 +43,7 @@
     <article>
       <img src="assets/beomeo-sa.png" alt="Templo Beomeo-sa">
       <h3>2. Templo Beomeo-sa</h3>
-      <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+      <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p> <br>
       <span>Bom para:</span>
       <ul>
         <li>História</li>
@@ -53,10 +53,10 @@
     <article>
       <img src="assets/yongdusan.png" alt="Parque Yongdusan">
       <h3>3. Parque Yongdusan</h3>
-      <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
+      <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p> <br>
       <span>Bom para:</span>
       <ul>
-        <li>Casais</li>
+        <li style="color: #591B98;">Casais</li>
         <li>Famílias</li>
         <li>Orçamento</li>
       </ul>
